--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ button {
 }
 
 #quoteContainer {
+  text-align: center;
   display: none;
-  margin-top: 24px;
+  margin-top: 50px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
   padding: 24px;
@@ -89,6 +90,17 @@ a {
   border:1px solid rgba(255, 255, 255, 0.18); 
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.button-container button {
+  margin: 0 10px;
+}
+
 
 @media only screen and (max-width: 600px) {
   button {
